# tiplot-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/models/: QuadCopter.glb
scripts/: install.sh  launch.sh  simulate_data_stream.py  tiplot.desktop
scripts/loader/: .gitignore  main.py  pyproject.toml  requirements.txt  tiplot-loader.spec
scripts/loader/gui/: ardupilot_tab.py  main_window.py  mavlink_tab.py  receiver_tab.py  ulg_tab.py
scripts/loader/parsers/: ardupilot.py
scripts/loader/senders/: ardupilot.py  mavlink.py  ulg.py
src/: main.rs  shader.wgsl
src/acquisition/: mod.rs  tcp_receiver.rs
src/core/: data_store.rs  mod.rs  paths.rs
src/ui/: app.rs  app_state.rs  layout.rs  menu.rs  mod.rs  renderer.rs
src/ui/panels/: mod.rs  scene_3d.rs  timeline_panel.rs  topic_panel.rs  view3d_panel.rs
src/ui/panels/scene/: config.rs
src/ui/panels/tabs/: config.rs  gltf_loader.rs  mod.rs  scene.rs
src/ui/tiles/: mod.rs  plot_tile.rs  tile_behavior.rs
